# rpi-cam

./: .gitignore  CMakeLists.txt  GstFactory.cpp  GstFactory.h  Pipeline.cpp  Pipeline.h  PipelineConstructor.cpp  PipelineConstructor.h  README.md  install.sh  main.cpp
network/: FaceDetectDataObject.cpp
old/: main_attempt.cpp
